force-app/main/default/objects/Apex_Code_Coverage_Class_Level__c/Apex_Code_Coverage_Class_Level__c.object-meta.xml
<CustomObject>
    <label>Apex Code Coverage (Class Level)</label>
    <nameField>
        <displayFormat>CR-{000}</displayFormat>
        <label>Apex Code Coverage ( Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Code Coverage (Class Level)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>