force-app/main/default/objects/Apex_Code_Coverage_Class_Level__c/fields/Apex_Class_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Last_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apex Class Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Apex_Code_Coverage_Class_Level</relationshipName>
    <type>Lookup</type>
</CustomField>