force-app/main/default/objects/Apex_Code_Coverage_Class_Level__c/fields/Apex_Test_Run_Container__c.field-meta.xml
<CustomField>
    <fullName>Apex_Test_Run_Container__c</fullName>
    <label>Apex Test Run Container</label>
    <referenceTo>Apex_Test_Run_Container__c</referenceTo>
    <relationshipLabel>Apex Code Coverage (Class Level)</relationshipLabel>
    <relationshipName>Apex_Code_Coverage_Class_Level</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>