force-app/main/default/objects/Apex_Code_Coverage_Class_Level__c/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <formula>Number_of_Lines_Covered__c / (Number_of_Lines_Covered__c +  Number_of_Lines_Uncovered__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>