force-app/main/default/objects/Apex_Code_Coverage_Class_Level__c/fields/Lines_Covered__c.field-meta.xml
<CustomField>
    <fullName>Lines_Covered__c</fullName>
    <label>Lines Covered</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>